--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <title>Cosmic Weather Tales - Nasa Space Apps</title>
 <style>
 /* ===== Reset e Base ===== */
+/*comentando*/
 * {
     margin: 0;
     padding: 0;
