adicionei as fotos do quadro com marca e a spark

--- a/lobby.html
+++ b/lobby.html
@@ -52,7 +52,7 @@
             background-size: cover;
             background-position: center;
             position: relative;
-            margin-top: 110px;
+            margin-top: 95px;
             text-align: center;
         }
 
@@ -60,6 +60,7 @@
             display: flex;
             flex-direction: row;
             justify-content: center;
+            
         }
 
         .botoes {
@@ -122,19 +123,19 @@
             <div class="quadro" id="quadro-terra">
                 <a href="pessoas.html">
                     <img src="src/imgapps/earthlings.png" alt="" id="texto-earthlings">
-                    <img src="src/img/Frame_1__1_-removebg-preview.png" alt="EARTH">
+                    <img src="src/img/quadro-terra.png" alt="EARTH">
                 </a>
             </div>
             <div class="quadro" id="quadro-sol">
                 <a href="solar-flare/index.html">
                     <img src="src/imgapps/solarflare.png" alt="" id="texto-sol">
-                    <img src="src/img/Group_1-removebg-preview.png" alt="SUN">
+                    <img src="src/img/quadro-erupcao.png" alt="SUN">
                 </a>
             </div>
             <div class="quadro" id="quadro-cme">
                 <a href="cme/index.html">
                     <img src="src/imgapps/cme.png" alt="" id="texto-cme">
-                    <img src="src/img/Frame_1__2_-removebg-preview.png" alt="EMC">
+                    <img src="src/img/quadro-cme.png" alt="EMC">
                 </a>
             </div>
             <div class="botoes">
