titulos personagens ok

--- a/vg_producers/index.html
+++ b/vg_producers/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <canvas id="starCanvas"></canvas>
-      <img src="scenes/COSMIC-NARRATOR _ electrical operator.png" alt="cosmic narrator is astronaut" id="title">
+      <img src="scenes/COSMIC-NARRATOR _ VIDEO GAME PRODUCER.png" alt="cosmic narrator is astronaut" id="title">
     <div class="historia-quadro">
       
     </div>
