--- a/cientista_espacial/index.html
+++ b/cientista_espacial/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <canvas id="starCanvas"></canvas>
-      <img src="scenes/COSMIC-NARRATOR _ farmer.png" alt="cosmic narrator is astronaut" id="title">
+      <img src="scenes/COSMIC-NARRATOR _ SPACE SCIENTIST.png" alt="cosmic narrator is astronaut" id="title">
     <div class="historia-quadro">
       
     </div>
