--- a/operador_de_satelite/index.html
+++ b/operador_de_satelite/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Word Search: Space</title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="../css/personagens.css">
 <link rel="stylesheet" href="../../style.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
@@ -15,7 +15,7 @@
       
     </div>
 
-    <div id="carouselExampleFade" class="carousel slide carousel-fade carousel-1088">
+    <div id="carouselExampleFade" class="carousel slide carousel-fade carousel-512">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleFade" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         
@@ -75,7 +75,7 @@
         // marca que o usuário acessou um dos quadrinhos
         localStorage.setItem("quadrinhoAcessado", "true");
     </script>
-    <script src="main.js"></script>
+    <script src="../js/personagens.js"></script>
     <script src="../../main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
