--- a/pessoas.html
+++ b/pessoas.html
@@ -285,6 +285,23 @@
             </div>
         </div>
 
+         <!-- Card do motorista  -->
+            <div class="character-card">
+                <div class="card-front">
+                    <img src="src/personagens/card-motorista.png" alt="Bus Driver" style="width:180px">
+                </div>
+                <div class="card-back">
+                    <h2>Bus Driver</h2>
+                    <p>Name:Carlos Carter</p>
+                    <p>Age: 47 years old</p>
+                    <p>Personality: Calm, attentive and intelligent</p>
+                    <a href="/motorista/index.html" alt="Bus Driver Page">
+                        <button class="choose" id="character-selection-btn">Select Bus Driver</button>
+                    </a>
+                </div>
+            </div>
+        </div>
+
         <button id="back-button" onclick="window.location.href='lobby.html'">Back to lobby🌟</button>
     </div>
 
