--- a/motorista/index.html
+++ b/motorista/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <canvas id="starCanvas"></canvas>
-      <img src="scenes/COSMIC-NARRATOR _ common person.png" alt="cosmic narrator is astronaut" id="title">
+      <img src="scenes/COSMIC-NARRATOR _ bus driver.png" alt="cosmic narrator is astronaut" id="title">
     <div class="historia-quadro">
       
     </div>
@@ -23,22 +23,20 @@
         
             <button type="button" data-bs-target="#carouselExampleFade" data-bs-slide-to="2" aria-label="Slide 3"></button>
 
+            <button type="button" data-bs-target="#carouselExampleFade" data-bs-slide-to="3" aria-label="Slide 4"></button>
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block w-100" src="scenes/person-scene1.png" alt="Primeiro Slide">
+                <img class="d-block w-100" src="scenes/motorista-1.png" alt="Primeiro Slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="scenes/person-scene2.png" alt="Segundo Slide">
+                <img class="d-block w-100" src="scenes/motorista-2.png" alt="Segundo Slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="scenes/person-scene3.png" alt="Terceiro Slide">
+                <img class="d-block w-100" src="scenes/motorista-3.png" alt="Terceiro Slide">
             </div>
-             <div class="carousel-item">
-                <img class="d-block w-100" src="scenes/person-scene4.png" alt="Terceiro Slide">
-            </div>
-             <div class="carousel-item">
-                <img class="d-block w-100" src="scenes/person-scene5.png" alt="Terceiro Slide">
+            <div class="carousel-item">
+                <img class="d-block w-100" src="scenes/motorista-4.png" alt="Terceiro Slide">
             </div>
 
         </div>
@@ -56,7 +54,7 @@
             <span class="visually-hidden">Próximo</span>
         </button>
     </div>
-
+ 
     <div id="completion-message" style="display:none; color: lightgreen; font-size: 20px; margin-top: 20px;">
         ✅ You have completed at least one comic!
     </div>
