--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Cosmic Weather Tales - Nasa Space Apps</title>
 <style>
-/* ===== Reset e Base ===== */
+/* ======= Reset e Base ===== */
 /*comentando*/
 * {
     margin: 0;
