--- a/nivelgame.html
+++ b/nivelgame.html
@@ -6,6 +6,7 @@
 <title>Cosmic Weather Tales - Nasa Space Apps</title>
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="../../style.css">
+<link rel="stylesheet" href="css/style.css">
     <style>
 
        
