--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Cosmic Weather Tales - Nasa Space Apps</title>
+<link rel="stylesheet" href="css/style.css">
 <style>
 /* ===== Reset e Base ===== */
 /*comentando*/
